# gaianet-rag-api-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  environment_gaia.yml  index.html  local.yml  package.json  pnpm-lock.yaml  prod.yml  pyproject.toml  pyproject.toml.bk  requirements-common.txt  requirements-santteegt.txt  run.py  vocs.config.ts
.vocs/: search-index-36c68110.json
apis/: index.html
apis/agora-api/: index.html
apis/other-api-sources/: index.html
architecture/: index.html
architecture/code-review/: index.html
architecture/overview/: index.html
architecture/tech-stack/: index.html
assets/: agora-api-AW-_nqh0.js  agora-api-BZUsbY2A.js  agora-api-BnVpp1TA.js  agora-api-C2CvK3Lw.js  agora-api-CQ6K5cm2.js  agora-api-CVpeT1MS.js  agora-api-Cs07ssVg.js  agora-api-D-QUJU2A.js  agora-api-DN96Z8w0.js  agora-api-Dey7M_a2.js  agora-api-DuWaTrgL.js  agora-api-Dz-h3ado.js  agora-api-M-fqq9AD.js  agora-api-MFU_bONG.js  agora-api-O7ygYgER.js  agora-api-_5lXpBTU.js  agora-api-kTU5np0W.js  agora-api-kzTf63f7.js  agora-api-ugDcQ6ab.js  apis-B0DwVWWa.js  apis-BEz5i8Oj.js  apis-BK86P_JG.js  apis-BL91gQA3.js  apis-BZu1lu-O.js  apis-BdD40rOr.js  apis-Bq9vGqAJ.js  apis-CQFvfr4s.js  apis-CX03WmR4.js  apis-Cf0MM6Xh.js  apis-Cou4k2E7.js  apis-Cp2iSMJw.js  apis-Cu3t23f1.js  apis-D1iFxeh6.js  apis-Di-un48y.js  apis-HoQu4oaV.js  apis-QDwbfawa.js  apis-hzgkGAxY.js  apis-uWu95hDF.js  architecture-B8MbSpXf.js  architecture-BXTo28X5.js  (+331 more)
boardroom/: README.md  agora_optimism.yaml  boardroom_openapi.yaml  connector.yaml  mappings.yaml  records_by_protocol.csv
cli/: index.html
cli-reference/: index.html
cli/other-llm-providers/: index.html
cli/settings/: index.html
config/: .env.sample  agora_api_pipeline.yaml  agora_openapi.yaml  api_pipeline.yaml  api_pipeline_template.yaml  boardroom_api_pipeline.yaml  mappings.yaml
deployment/: index.html
docs/: footer.tsx
docs/pages/: apis.mdx  architecture.mdx  cli-reference.mdx  cli.mdx  deployment.mdx  examples.mdx  getting-started.mdx  index.mdx  manifest-definition.mdx  node-deployment.mdx  tech-stack.mdx
docs/pages/apis/: agora-api.mdx  boardroom-api.mdx  other-api-souces.mdx  other-api-sources.mdx
docs/pages/architecture/: code-review.mdx  overview.mdx  tech-stack.mdx
docs/pages/cli/: node-deployment.mdx  other-llm-providers.mdx  reference.mdx  settings.mdx  setup.mdx
docs/pages/manifest-definition/: other-apis.mdx  overview.mdx  sample-manifests.mdx
examples/: index.html
experiments/: .env.sample  app.py  boardroom_llm_api.ipynb  data_explore.ipynb  data_explore_cftoc.ipynb
gaianet_rag_api_pipeline/: __init__.py  chunking.py  config.py  embeddings.py  input.py  loader.py  output.py  pipeline.py  preprocessing.py  serialize.py
gaianet_rag_api_pipeline/io/: __init__.py  qdrant.py
gaianet_rag_api_pipeline/io/airbyte/: __init__.py  api_connector.py
gaianet_rag_api_pipeline/processor/: __init__.py  embedder.py  parser.py
gaianet_rag_api_pipeline/schema/: __init__.py  base.py  pipeline.py
gaianet_rag_api_pipeline/udfs/: __init__.py  json.py  reducers.py  strings.py
gaianet_rag_api_pipeline/utils/: __init__.py  services.py  yaml.py
getting-started/: index.html
manifest-definition/: index.html
manifest-definition/overview/: index.html
manifest-definition/sample-manifests/: index.html
node-deployment/: index.html
other-apis/: index.html
tech-stack/: index.html
tests/: test_pipeline.py
