[tool.black]
line-length = 119
target-version = ['py311']

[tool.poetry]
name = "gaia-boardroom-rag-pipeline"
version = "0.1.0"
description = ""
authors = ["RaidGuild <clerics@raidguild.org>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
airbyte = "0.16.4"
appnope = "0.1.4"
asttokens = "2.4.1"
comm = "0.2.2"
debugpy = "1.8.2"
decorator = "5.1.1"
exceptiongroup = "1.2.2"
executing = "2.0.1"
importlib-metadata = ">=6.0,<=8.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
jedi = "0.19.1"
jupyter_client = "8.6.2"
jupyter_core = "5.7.2"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
packaging = "24.1"
parso = "0.8.4"
pexpect = "4.9.0"
pickleshare = "0.7.5"
platformdirs = "4.2.2"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
pygments = "2.18.0"
pyzmq = "26.0.3"
six = "1.16.0"
stack_data = "0.6.2"
tornado = "6.4.1"
traitlets = "5.14.3"
typing-extensions = "4.12.2"
wcwidth = "0.2.13"
zipp = "3.19.2"
aiohappyeyeballs = "2.3.4"
aiohttp = "3.10.0"
aiohttp-cors = "0.7.0"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.4.0"
appdirs = "1.4.4"
async-lru = "2.0.4"
attrs = "23.2.0"
backoff = "2.2.1"
beartype = "0.15.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
bokeh = "3.4.3"
boto3 = "1.34.151"
botocore = "1.34.151"
cachetools = "5.4.0"
certifi = "2024.7.4"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
coloredlogs = "15.0.1"
contourpy = "1.2.1"
cryptography = "43.0.0"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
deepdiff = "7.0.1"
deprecated = "1.2.14"
diskcache = "5.6.3"
distro = "1.9.0"
emoji = "2.12.1"
filelock = "3.15.4"
filetype = "1.2.0"
flatbuffers = "24.3.25"
fonttools = "4.53.1"
frozenlist = "1.4.1"
fs = "2.4.16"
fsspec = "2024.6.1"
geographiclib = "2.0"
geopy = "2.4.1"
google-api-core = "2.19.1"
google-api-python-client = "2.139.0"
google-auth = "2.32.0"
google-auth-httplib2 = "0.2.0"
google-cloud-bigquery = "3.25.0"
google-cloud-core = "2.4.1"
google-cloud-pubsub = "2.23.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.7.1"
googleapis-common-protos = "1.63.2"
grpc-google-iam-v1 = "0.13.1"
grpcio = "1.65.2"
grpcio-status = "1.62.2"
h11 = "0.14.0"
h3 = "3.7.7"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
huggingface-hub = "0.24.5"
humanfriendly = "10.0"
idna = "3.7"
iopath = "0.1.10"
ipywidgets = "8.1.3"
jinja2 = "3.1.4"
jmespath = "1.0.1"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpath-python = "1.0.6"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-bokeh = "4.0.5"
jupyterlab-widgets = "3.0.11"
kiwisolver = "1.4.5"
langchain = "0.2.11"
langchain-community = "0.2.10"
langchain-core = "0.2.26"
langchain-text-splitters = "0.2.2"
langdetect = "1.0.9"
langsmith = "0.1.95"
layoutparser = "0.3.4"
linkify-it-py = "2.0.3"
litellm = "1.42.8"
lxml = "5.2.2"
markdown = "3.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
matplotlib = "3.9.1"
mdit-py-plugins = "0.4.1"
mdurl = "0.1.2"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
networkx = "3.3"
nltk = "3.8.1"
numpy = "1.26.4"
onnx = "1.16.2"
onnxruntime = "1.18.1"
openai = "1.37.1"
opencv-python = "4.10.0.84"
openparse = "0.5.6"
opentelemetry-api = "1.26.0"
opentelemetry-exporter-otlp-proto-common = "1.26.0"
opentelemetry-exporter-otlp-proto-grpc = "1.26.0"
opentelemetry-proto = "1.26.0"
opentelemetry-sdk = "1.26.0"
opentelemetry-semantic-conventions = "0.47b0"
ordered-set = "4.1.0"
orjson = "3.10.6"
pandas = "2.2.2"
panel = "1.4.4"
param = "2.1.1"
pathway = "0.14.0"
pdf2image = "1.17.0"
pdfminer-six = "20231228"
pdfplumber = "0.11.2"
pillow = "10.4.0"
pillow-heif = "0.18.0"
portalocker = "2.10.1"
proto-plus = "1.24.0"
protobuf = "4.25.4"
pyarrow = "17.0.0"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pymupdf = "1.24.9"
pymupdfb = "1.24.9"
pyparsing = "3.1.2"
pypdf = "4.3.1"
pypdfium2 = "4.30.0"
python-dateutil = "2.9.0.post0"
python-docx = "1.1.0"
python-dotenv = "1.0.1"
python-iso639 = "2024.4.27"
python-magic = "0.4.27"
python-multipart = "0.0.9"
python-sat = "1.8.dev13"
pytz = "2024.1"
pyviz-comms = "3.0.3"
pyyaml = "6.0.1"
rapidfuzz = "3.9.5"
referencing = "0.35.1"
regex = "2024.7.24"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
rpds-py = "0.19.1"
rsa = "4.9"
s3transfer = "0.10.2"
safetensors = "0.4.3"
scikit-learn = "1.5.1"
scipy = "1.14.0"
shapely = "2.0.5"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlalchemy = "2.0.31"
sqlglot = "10.6.1"
sympy = "1.13.1"
tabulate = "0.9.0"
tenacity = "8.5.0"
threadpoolctl = "3.5.0"
tiktoken = "0.7.0"
timm = "1.0.8"
tokenizers = "0.19.1"
torch = "2.4.0"
torchvision = "0.19.0"
tqdm = "4.66.4"
transformers = "4.43.3"
typing-inspect = "0.9.0"
tzdata = "2024.1"
uc-micro-py = "1.0.3"
unstructured = "0.14.10"
unstructured-client = "0.25.1"
unstructured-inference = "0.7.36"
uritemplate = "4.1.1"
urllib3 = "2.2.2"
webencodings = "0.5.1"
widgetsnbextension = "4.0.11"
wrapt = "1.16.0"
xyzservices = "2024.6.0"
yarl = "1.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"