[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']

[tool.poetry]
name = "gaianet-rag-api-pipeline"
version = "0.1.0"
description = ""
authors = ["RaidGuild <clerics@raidguild.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/raid-guild/gaianet-rag-api-pipeline"
packages = [ { include = "gaianet_rag_api_pipeline" }, {include = "run.py" } ]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
airbyte = "0.16.4"
black = "24.4.2"
click= "8.1.7"
pathway = {version = "0.14.0", extras = ["xpack-llm-docs"]}
pydantic = "2.7.4"
pydantic-settings = "2.4.0"
python-dotenv = "1.0.1"
openapi-spec-validator = "0.4.0"
litellm = "1.41.1"
qdrant-client = "1.11.0"

[tool.poetry.scripts]
api-pipeline = "run:run"

[tool.poetry.group.dev.dependencies]
requests-mock = "*"
pytest-mock = "*"
pytest = "*"
